add_library(parser
            parser.cpp
            bool.cpp
            class.cpp
            control.cpp
            end.cpp
            function.cpp
            function_call.cpp
            function_class.cpp
            if.cpp
            if_else.cpp
            int.cpp
            loop.cpp
            next_break.cpp
            obj.cpp
            obj_new.cpp
            operator.cpp
            return.cpp
            string.cpp
            var.cpp
            var_g.cpp
            var_g_class.cpp
            window.cpp
            )
target_include_directories(parser PRIVATE ${Boost_INCLUDE_DIRS})
